# bandwidth-monitor

./: .gitignore  Makefile.toml  README.md  credentials.md
.github/workflows/: coverage.yml  release.yml  test.yml
bins/cli/: Cargo.toml
bins/cli/src/: main.rs
bins/cli/tests/: cli.rs
libs/google-sheets/: Cargo.toml
libs/google-sheets/src/: lib.rs
libs/lib-a/: Cargo.toml
libs/lib-a/src/: lib.rs
libs/lib-b/: Cargo.toml
libs/ookla-speedtest/: Cargo.toml
libs/ookla-speedtest/src/: lib.rs
