[package]
name = "bandwidth-monitor"
description = "This uses Ookla to run speed tests and store the results in a google sheet"
version = "0.1.0"
authors = ["Stefan Kuhn <semptic@kuhn.cloud>"]
edition = "2018"
license-file = "../../LICENSE"
readme = "../../README.md"
workspace = "../.."

[[bin]]
name="bandwidth-monitor"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }

bandwidth-monitor-lib-a = { path = "../../libs/lib-a", version = "0.1.0"  }
bandwidth-monitor-lib-b = { path = "../../libs/lib-b", version = "0.1.0"  }

clap = { version = "~4.1", features = ["derive"] }
clap-verbosity-flag = "~2.0"

anyhow = "~1.0"

loggerv = "~0.7"
ansi_term = "~0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"