[package]
name = "bandwidth-monitor"
description = "This uses Ookla to run speed tests and store the results in a google sheet"
version = "0.2.0"
authors = ["Stefan Kuhn <semptic@kuhn.cloud>"]
edition = "2018"
license-file = "../../LICENSE"
readme = "../../README.md"
workspace = "../.."

[[bin]]
name="bandwidth-monitor"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }

tokio = { version = "1", features = ["full"] }

bandwidth-monitor-google-sheets = { path = "../../libs/google-sheets", version = "*"  }
bandwidth-monitor-ookla-speedtest = { path = "../../libs/ookla-speedtest", version = "*"  }

clap = { version = "~4.1", features = ["derive"] }
clap-verbosity-flag = "~2.0"

anyhow = "~1.0"

loggerv = "~0.7"
ansi_term = "~0.12"
mockall = "0.11.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
