[package]
name = "bandwidth-monitor-google-sheets"
version = "0.2.0"
authors = ["Stefan Kuhn <semptic@kuhn.cloud>"]
edition = "2018"
license-file = "../../LICENSE"
readme = "../../README.md"
workspace = "../.."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = { workspace = true }

log = { workspace = true }

google-sheets4 = "*"
serde = "^1.0"
serde_json = "^1.0"
mockall = "0.11.3"
async-trait = "0.1.66"
