[package]
name = "bandwidth-monitor-lib-a"
version = "0.1.0"
authors = ["Stefan Kuhn <semptic@kuhn.cloud>"]
edition = "2018"
license-file = "../../LICENSE"
readme = "../../README.md"
workspace = "../.."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = { workspace = true }

log = { workspace = true }
