[package]
name = "bandwidth-monitor-ookla-speedtest"
version = "0.1.0"
authors = ["Stefan Kuhn <semptic@kuhn.cloud>"]
edition = "2018"
license-file = "../../LICENSE"
readme = "../../README.md"
workspace = "../.."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = { workspace = true }

log = { workspace = true }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

chrono = { version = "^0.4.23", features = ["serde"] }
